--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                  <img src="img/narradesk.png" alt="" srcset="">
                  <img src="img/narraartiles.png" alt="" srcset="">
                  <img src="img/narracomtact.png" alt="" srcset="">
-                 <img src="img/musicpla.png" alt="" srcset="">
+                 <img src="img/narrablof.png" alt="" srcset="">
                 </div>
 
                 <div class="projectcontainer">
